--- a/css/moreStyles.css
+++ b/css/moreStyles.css
@@ -3,7 +3,7 @@ body{
 	  background-color: #f1f1f1;
 	}
     .container {
-      max-width: 600px;
+      max-width: 800px;
       margin: 0 auto;
     }
 
@@ -20,7 +20,7 @@ body{
 
     .movie-card {
       padding: 20px;
-      background-color: #f5f5f5;
+      background-color: #b6dde7;
       border: 1px solid #ccc;
       text-align: center;
     }
@@ -29,10 +29,10 @@ body{
       margin-top: 30px;
       text-align: center;
     }
-
     
 	.container button {
-	  width: 50px;
+    font-size: small;
+	  width: 80px;
 	  margin-top: 10px;
 	  margin-left: 10px;
     background-color: #5b658a;
